k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: megashop-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: megashop-backend
  template:
    metadata:
      labels:
        app: megashop-backend
    spec:
      containers:
      - name: backend
        image: rajijay/megashop-backend:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: megashop-backend
spec:
  selector:
    app: megashop-backend
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
