k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: megashop-backend
spec:
  selector:
    app: megashop-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
