k8s/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: megashop-mongo
spec:
  selector:
    app: megashop-mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
